# rust-todo-app

./: Cargo.toml
src/: main.rs
templates/: index.html
